--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "grunt": "~0.4.5",
     "load-grunt-tasks": "~0.6.0",
     "grunt-contrib-connect": "~0.10.0",
-    "webpack": "~1.12.x",
-    "webpack-dev-server": "~1.12.x",
-    "grunt-webpack": "~1.0.x",
+    "webpack": "~3.12.x",
+    "webpack-dev-server": "~3.8.x",
+    "grunt-webpack": "~3.1.x",
     "grunt-open": "~0.2.3",
     "grunt-maven-deploy": "^0.2.x",
     "uglify-js": "^2.7.x",
@@ -13,7 +13,7 @@
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
     "file-loader": "~0.8.x",
-    "css-loader": "~0.9.0",
+    "css-loader": "~3.2.0",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
@@ -26,12 +26,12 @@
     "grunt-mocha-test": "~0.13.x",
     "chai": "~3.5.0",
     "chai-xml": "~0.3.1",
-    "jshint": "^2.5.0",
+    "jshint": "^2.10.2",
     "jshint-loader": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.6.0",
-    "sass-loader": "3.1.x",
-    "node-sass": "^3.3.3",
+    "sass-loader": "~7.3.x",
+    "node-sass": "~4.12.0",
     "react-hot-loader": "^1.2.7",
     "json-loader": "^0.5.1",
     "rewire": "^2.1.3",
