--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "grunt-contrib-clean": "~0.6.0",
     "sass-loader": "~7.3.x",
     "node-sass": "~4.12.0",
-    "react-hot-loader": "^1.2.7",
+    "react-hot-loader": "~1.2.x",
     "json-loader": "^0.5.1",
     "rewire": "^2.1.3",
     "rewire-webpack": "^1.0.0",
