--- a/package.json
+++ b/package.json
@@ -1,76 +1,58 @@
 {
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "load-grunt-tasks": "~0.6.0",
-    "grunt-contrib-connect": "~0.10.0",
-    "webpack": "~3.12.x",
-    "webpack-dev-server": "~3.8.x",
-    "grunt-webpack": "~3.1.x",
-    "grunt-open": "~0.2.3",
-    "grunt-maven-deploy": "^0.2.x",
-    "uglify-js": "^2.7.x",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "grunt-webpack": "^3.1.3",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2",
     "jsx-loader": "~0.12.x",
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
     "file-loader": "~0.8.x",
     "css-loader": "~3.2.0",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-jasmine": "~0.1.5",
-    "karma-phantomjs-launcher": "~0.1.3",
-    "karma": "~0.12.21",
-    "grunt-karma": "~0.8.3",
-    "karma-webpack": "~1.2.2",
-    "mocha": "~3.1.x",
-    "grunt-mocha-test": "~0.13.x",
-    "chai": "~3.5.0",
-    "chai-xml": "~0.3.1",
-    "jshint": "^2.10.2",
-    "jshint-loader": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.6.0",
     "sass-loader": "~7.3.x",
-    "node-sass": "~4.12.0",
-    "react-hot-loader": "~1.2.x",
-    "json-loader": "^0.5.1",
-    "rewire": "^2.1.3",
-    "rewire-webpack": "^1.0.0",
-    "bower": "^1.3.12",
-    "react-docgen": "^2.4.x",
-    "jsdoc": "^3.3.2",
-    "grunt-jsdoc": "^0.6.7",
-    "jsdoc-jsx": "^0.1.0",
-    "spinkit": "^1.2.x"
+    "node-sass": "~4.12.0"
   },
   "dependencies": {
+    "classnames": "^2.2.x",
+    "clipboard": "^1.5.x",
+    "clone": "^1.0.2",
+    "detect-browser": "1.3.1",
+    "expose-loader": "^0.7.x",
+    "fluxxor": "^1.7.x",
+    "grunt": "^1.0.4",
+    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-webpack": "^3.1.3",
+    "history": "1.13.1",
+    "immutable": "^3.7.x",
+    "jsonix": "^2.1.x",
+    "lodash": "^3.10.x",
+    "loglevel": "^1.4.x",
+    "moment-timezone": "0.3.0",
+    "ncname": "^1.0.x",
+    "papaparse": "^4.1.x",
     "react": "^0.14.x",
-    "react-dom": "^0.14.x",
-    "react-bootstrap": "^0.28.x",
-    "react-addons-update": "^0.14.x",
-    "react-addons-linked-state-mixin": "^0.14.x",
     "react-addons-css-transition-group": "^0.14.x",
+    "react-addons-linked-state-mixin": "^0.14.x",
+    "react-addons-update": "^0.14.x",
+    "react-bootstrap": "^0.28.x",
+    "react-dom": "^0.14.x",
+    "react-draggable": "^1.1.x",
+    "react-edit": "^4.1.x",
+    "react-immutable-render-mixin": "^0.8.1",
     "react-router": "^1.0.x",
     "react-router-bootstrap": "^0.19.x",
-    "fluxxor": "^1.7.x",
-    "history": "1.13.1",
-    "moment-timezone": "0.3.0",
-    "jsonix": "^2.1.x",
-    "clone": "^1.0.2",
-    "immutable": "^3.7.x",
-    "react-immutable-render-mixin": "^0.8.1",
-    "spark-md5": "0.0.5",
-    "react-draggable": "^1.1.x",
-    "classnames": "^2.2.x",
     "reactabular": "^5.0.x",
-    "react-edit": "^4.1.x",
-    "lodash": "^3.10.x",
-    "expose-loader": "^0.7.x",
-    "loglevel": "^1.4.x",
-    "clipboard": "^1.5.x",
-    "ncname": "^1.0.x",
-    "detect-browser": "1.3.1",
-    "papaparse": "^4.1.x"
+    "spark-md5": "0.0.5"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "description": "",
   "dist": "dist",
