--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "~3.2.0",
+    "file-loader": "~0.8.x",
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "jsx-loader": "~0.12.x",
+    "node-sass": "~4.12.0",
+    "sass-loader": "~7.3.x",
+    "style-loader": "~0.8.0",
+    "url-loader": "~0.5.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2",
-    "jsx-loader": "~0.12.x",
-    "style-loader": "~0.8.0",
-    "url-loader": "~0.5.5",
-    "file-loader": "~0.8.x",
-    "css-loader": "~3.2.0",
-    "sass-loader": "~7.3.x",
-    "node-sass": "~4.12.0"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "classnames": "^2.2.x",
