--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "~3.2.0",
     "file-loader": "~0.8.x",
     "grunt-webpack": "^3.1.3",
@@ -35,7 +36,6 @@
     "grunt-webpack": "^3.1.3",
     "history": "1.13.1",
     "immutable": "^3.7.x",
-    "jsonix": "^2.1.x",
     "lodash": "^3.10.x",
     "loglevel": "^1.4.x",
     "moment-timezone": "0.3.0",
