--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "~3.2.0",
+    "eslint": "^6.5.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "~0.8.x",
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
     "jsx-loader": "~0.12.x",
     "node-sass": "~4.12.0",
     "sass-loader": "~7.3.x",
+    "spinkit": "^1.2.x",
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2",
-    "spinkit": "^1.2.x"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "classnames": "^2.2.x",
