--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "eslint": "^6.5.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.16.0",
+    "expose-loader": "^0.7.5",
     "file-loader": "~0.8.x",
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^2.2.4",
     "jsx-loader": "~0.12.x",
     "node-sass": "~4.12.0",
     "sass-loader": "~7.3.x",
@@ -25,14 +27,14 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "jsonix": "^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.x",
     "clipboard": "^1.5.x",
     "clone": "^1.0.2",
     "detect-browser": "1.3.1",
-    "expose-loader": "^0.7.x",
     "fluxxor": "^1.7.x",
     "history": "1.13.1",
     "immutable": "^3.7.x",
