--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "eslint-plugin-react": "^7.16.0",
     "expose-loader": "^0.7.5",
     "file-loader": "~0.8.x",
+    "git-revision-webpack-plugin": "^3.0.4",
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^2.2.4",
+    "jsonix": "^3.0.0",
     "jsx-loader": "~0.12.x",
     "node-sass": "~4.12.0",
     "sass-loader": "~7.3.x",
@@ -27,8 +29,7 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2",
-    "jsonix": "^3.0.0"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "classnames": "^2.2.x",
