--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "^1.0.x",
     "react-router-bootstrap": "^0.19.x",
     "reactabular": "^7.0.x",
+    "reactabular-select": "^7.0.x",
     "spark-md5": "0.0.5"
   },
   "scripts": {
