--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-bootstrap": "^0.19.x",
     "reactabular": "^7.0.x",
     "reactabular-select": "^7.0.x",
+    "selectabular": "^2.1.x",
     "spark-md5": "0.0.5"
   },
   "scripts": {
