--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "clone": "^1.0.2",
     "detect-browser": "1.3.1",
     "fluxxor": "^1.7.x",
-    "history": "1.13.1",
     "immutable": "^3.7.x",
     "lodash": "^4.17.x",
     "loglevel": "^1.4.x",
@@ -52,8 +51,8 @@
     "react-draggable": "^1.1.x",
     "react-edit": "^4.1.x",
     "react-immutable-render-mixin": "^0.8.1",
-    "react-router": "^1.0.x",
-    "react-router-bootstrap": "^0.19.x",
+    "react-router": "^3.2.x",
+    "react-router-bootstrap": "~0.23.3",
     "reactabular": "^7.0.x",
     "reactabular-select": "^7.0.x",
     "selectabular": "^2.1.x",
