--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "~3.2.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.16.0",
     "expose-loader": "^0.7.5",
@@ -18,6 +18,7 @@
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^2.2.4",
+    "jsonix": "^3.0.0",
     "jsx-loader": "~0.12.x",
     "node-sass": "~4.12.0",
     "sass-loader": "~7.3.x",
@@ -25,10 +26,9 @@
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.8.2",
-    "webpack-merge": "^4.2.2",
-    "jsonix": "^3.0.0"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "classnames": "^2.2.x",
@@ -38,7 +38,7 @@
     "fluxxor": "^1.7.x",
     "immutable": "^3.7.x",
     "lodash": "^4.17.x",
-    "loglevel": "^1.4.x",
+    "loglevel": "^1.6.x",
     "moment-timezone": "0.3.0",
     "ncname": "^1.0.x",
     "papaparse": "^4.1.x",
