--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classnames": "^2.2.x",
     "clipboard": "^1.5.x",
     "clone": "^1.0.2",
+    "core-js": "^3.4.0",
     "detect-browser": "1.3.1",
     "fluxxor": "^1.7.x",
     "immutable": "^3.7.x",
@@ -70,5 +71,17 @@
   "repository": "",
   "src": "src",
   "test": "test",
-  "version": "2.3.0-dev"
+  "version": "2.3.0-dev",
+
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry",
+          "corejs": 3
+        }
+      ]
+    ]
+  }
 }
