--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
           "useBuiltIns": "entry",
           "corejs": 3
         }
-      ]
+      ],
+      "@babel/preset-react"
     ]
   }
 }
