--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "repository": "",
   "src": "src",
   "test": "test",
-  "version": "2.3.0",
+  "version": "2.4-dev",
   "babel": {
     "presets": [
       [
