--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-language: node_js
-node_js:
-  - 12
-script: npm run build
-
+language: bash
+services:
+  - docker
+script: bash build.sh install build
