--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "detect-browser": "1.3.1",
     "fluxxor": "^1.7.x",
     "immutable": "^3.7.x",
-    "lodash": "^4.17.x",
+    "lodash": "^4.17.20",
     "loglevel": "^1.6.x",
     "moment-timezone": "0.3.0",
     "ncname": "^1.0.x",
