--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "~3.2.0",
+    "css-loader": "^3.2.1",
     "eslint": "^6.6.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.16.0",
