--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "fluxxor": "^1.7.x",
     "immutable": "^3.7.x",
     "lodash": "^4.17.20",
-    "loglevel": "^1.6.x",
-    "moment-timezone": "0.3.0",
+    "loglevel": "^1.7.0",
+    "moment-timezone": "^0.3.1",
     "ncname": "^1.0.x",
     "papaparse": "^5.3.0",
     "react": "^0.14.x",
@@ -56,7 +56,7 @@
     "reactabular": "^7.0.x",
     "reactabular-select": "^7.0.x",
     "selectabular": "^2.1.x",
-    "spark-md5": "0.0.5"
+    "spark-md5": "^0.0.5"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
