--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "jquery": "^2.2.4",
     "jsonix": "^3.0.0",
     "jsx-loader": "~0.12.x",
-    "node-sass": "~4.12.0",
     "sass-loader": "~7.3.x",
+    "sass": "^1.22.10",
     "spinkit": "^1.2.x",
     "style-loader": "~0.8.0",
     "url-loader": "~0.5.5",
