package version to 2.5.0-dev

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "repository": "",
   "src": "src",
   "test": "test",
-  "version": "2.4.5",
+  "version": "2.5.0-dev",
   "babel": {
     "presets": [
       [
