--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,27 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        //webpack-dev-server -d --config webpack.dev.js
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Run dev server",
+            "program": "${workspaceFolder}/node_modules/.bin/webpack-dev-server",
+            "args": [
+                "-d",
+                "--config",
+                "webpack.dev.js"
+            ],
+            "autoAttachChildProcesses": true,
+            "stopOnEntry": true,
+            "sourceMapPathOverrides": {
+                "webpack:///*": "${webRoot}/*"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "test – concepts",
             "skipFiles": [
                 "<node_internals>/**"
             ],
