--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "repository": "",
   "src": "src",
   "test": "test",
-  "version": "2.5.1",
+  "version": "2.6.0-dev",
   "babel": {
     "presets": [
       [
